--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,15 +29,14 @@
                         <td th:text="${employee.firstName}">FistName</td>
                         <td th:text="${employee.lastName}">LastName</td>
                         <td th:text="${employee.email}">Email</td>
+                        <td>
+                            <a th:href="@{/showFormForUpdate/{id}(id=${employee.id})}" class="btn btn-primary">Update</a>
+                            <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}" class="btn btn-danger">Delete</a>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
-                <ul class="nav nav-pills">
-                    <li th:each="page,status:${pages}">
-                        <a th:class="${status.index==currentPage?'btn btn-primary ms-1':'btn btn-outline-primary ms-1'}" th:text="${status.index}"
-                           th:href="@{/user/index(page=${status.index}, keyword=${keyword})}">page</a>
-                    </li>
-                </ul>
+
             </div>
         </div>
     </div>
