--- a/src/main/resources/templates/update_employee.html
+++ b/src/main/resources/templates/update_employee.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="engine"
+>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Form Employes</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css">
 </head>
 <body>
-$END$
+<h2>Update Form for Employee</h2>
+<div layout:fragment="content1">
+    <div class="col-md-6 offset-3">
+        <form method="post"  th:action="@{/saveNewEmployee}" th:object="${employeeDTO}" action="#">
+            <!--Add id form to handle the update-->
+            <input type="hidden" th:field="*{id}">
+
+            <input class="form-control mb-4 col-4" type="text" th:field="*{firstName}"  placeholder="Employee First Name">
+
+            <input class="form-control mb-4 col-4" type="text" th:field="*{lastName}" placeholder="Employee Last Name">
+
+            <input class="form-control mb-4 col-4" type="text" th:field="*{email}" placeholder="Employee Email Address">
+
+
+            <button type="submit" class="btn btn-primary col-2">update</button>
+        </form>
+    </div>
+</div>
+
 </body>
 </html>
