--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="employee:${list_employees}">
+                    <tr th:each="employee:${listEmployees}"><!--list_employees-->
                         <td th:text="${employee.firstName}">FistName</td>
                         <td th:text="${employee.lastName}">LastName</td>
                         <td th:text="${employee.email}">Email</td>
@@ -37,6 +37,28 @@
                     </tbody>
                 </table>
 
+                <div th:if="${totalPages > 1}">
+                    <div class="row col-sm-10">
+                        <div class="col-sm-2">
+                            Total rows: [[${totalItems}]]
+                        </div>
+                        <div class="col-sm-1">
+                             <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+                                 <a th:if="${currentPage != i}" th:href="@{'/page/'+ ${i}}">[[${i}]]</a>
+                                 <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
+                             </span>
+                        </div>
+                        <div class="col-sm-1">
+                            <a th:if="${currentPage < totalPages}" th:href="@{'/page/' +${currentPage+1} } ">Next</a>
+                            <span th:unless="${currentPage < totalPages}" >Next</span>
+                        </div>
+
+                        <div class="col-sm-1">
+                            <a th:if="${currentPage < totalPages}" th:href="@{'/page/' +${totalPages}}">Last</a>
+                            <span th:unless="${currentPage < totalPages}" >Last</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
